--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/pokemon/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/pokemon/fav.svg" />
     
     <link
       rel="stylesheet"
